# LearnPython

./: README.md  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex16_test.txt  ex17.py  ex18.py  ex19.py  ex2.py  ex20.py  ex21.py  ex24.py  ex25.py  ex26.py  ex3.py  ex30.py  ex31.py  ex32.py  ex33.py  ex35.py  ex38.py  ex39.py  ex4.py  ex40.py  ex41.py  ex43.py  ex45.py  ex46.py  ex49.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  test.py
WebDemo/: AUTHORS  ChangeLog  setup.cfg  setup.py
WebDemo/webdemo.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
ex47/ex47/: game.py
ex47/test/: ex47_tests.py
ex48/ex48/: lexicon.py
ex48/test/: lexicon_tests.py
ex51/templates/: hello_form.html  index.html
ex51/tests/: app_tests.py  tools.py
ex52/: setup.py
ex52/gothonweb/: map.py
ex52/tests/: map_tests.py
ex52_1/: setup.py
ex52_1/templates/: upload_form.html
ex52_1/tests/: app_test.py  app_test_1.py
look/: app.py  images.py
mocktest/: List1.py  List10.py  List11.py  List12.py  List13.py  List14.py  List2.py  List3.py  List4.py  List5.py  List6.py  List7.py  List8.py  List9.py  function.py  function_mock.py  mock_demo01.py  modular.py  modular_mock.py  webclient.py  webclient_mock.py
webtest/helloweb/templates/: fform.html  hello.html  index.html  layout.html  show.html  uform.html
webtest/helloweb/tests/: app_mock.py  app_tests.py  tools.py
